--- a/NT2-sillabusz.tex
+++ b/NT2-sillabusz.tex
@@ -48,9 +48,9 @@
 \newcolumntype{C}{ >{\centering\arraybackslash} m{1.2cm} }
 \newcommand{\Ctable}[1]{
     \begin{center}
-        \begin{tabular}{ | C | C | C | m{8cm} |}
+        \begin{tabular}{ | C | C | C | m{8cm} | }
         \hline
-        NT1 & NT2 & OKTV & Leírás \\ \hline
+        \textbf{NT1} & \textbf{NT2} & \textbf{OKTV} & \multicolumn{1}{|c|}{\textbf{Leírás}} \\ \hline
         #1
         \end{tabular}
     \end{center}    
